# ooopsi

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  Toolchain-cross-mingw-linux.cmake  appveyor.yml  build-info.md
include/: ooopsi.hpp
src/: demangle.cpp  handlers.cpp  internal.hpp  itanium_abi.cpp  ooopsi.cpp  stacktrace.cpp
test/: crasher.cpp  example.cpp  test_abort.cpp  test_demangle.cpp  test_helper.hpp  test_trace.cpp
tools/: pprint_trace.py
